# crossref-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  package-cli.nix  package.nix  spec.md
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  TESTING_PATTERNS.md
patches/nu-plugin-core-v110/: Cargo.toml
src/: bibtex.rs  cache.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  utils.rs
tests/: bibtex_tests.rs  cache_tests.rs  client_tests.rs  config_tests.rs
