[package]
name = "crossref-rs"
version = "0.3.0"
edition = "2021"
authors = ["TonyWu20 <tony.w21@gmail.com>"]
description = "Crossref literature metadata & BibTeX tool (Nushell plugin + universal CLI)"
license = "MIT"
repository = "https://github.com/TonyWu20/crossref-rs"
keywords = ["crossref", "bibtex", "literature", "nushell", "cli"]
categories = ["command-line-utilities", "science"]

# ─── Feature flags ────────────────────────────────────────────────────────────
#
# Select which Nushell version the plugin binary targets:
#
#   Default (nushell 0.111):  cargo build
#   Nushell 0.110:            cargo build --no-default-features --features nu-v110
#
# The CLI binary is unaffected by these flags.
[features]
default = ["nu-v111"]
nu-v111 = ["nu-plugin-any", "dep:nu-plugin", "dep:nu-protocol"]
nu-v110 = ["nu-plugin-any", "dep:nu-plugin-v110", "dep:nu-protocol-v110"]
# Internal meta-feature — active when any nu-plugin version is selected.
# Used by the nu_plugin_crossref [[bin]] required-features so that the
# binary is silently skipped (not an error) when no nu feature is chosen.
nu-plugin-any = []

# Shared library (used by both CLI and Nushell plugin)
[lib]
name = "crossref_lib"
path = "src/lib.rs"

# Standard CLI binary (works in zsh, fish, bash, PowerShell, etc.)
[[bin]]
name = "crossref-cli"
path = "src/bin/cli.rs"

# Nushell plugin binary — only built when a nu-plugin version is selected.
[[bin]]
name = "nu_plugin_crossref"
path = "src/bin/nu_plugin_crossref.rs"
required-features = ["nu-plugin-any"]

[dependencies]
# CLI & argument parsing
clap = { version = "4.5", features = ["derive", "env", "color"] }
colored = "3.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async HTTP
reqwest = { version = "0.13", features = ["json", "gzip","query"] }
tokio = { version = "1", features = ["full"] }

# Crossref client + Unpaywall
crossref = "0.2"          # official Crossref Rust client
url = "2.5"

# BibTeX handling
serde_bibtex = "0.7"

# Configuration & cache
confy = "2.0.0"
dirs = "6.0"
cached = { version = "0.59", features = ["proc_macro"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1.0"

# Nushell plugin support — version selected via feature flags (see [features] above)
nu-plugin = { version = "0.111", optional = true }
nu-protocol = { version = "0.111", optional = true }
nu-plugin-v110 = { package = "nu-plugin", version = "0.110", optional = true }
nu-protocol-v110 = { package = "nu-protocol", version = "0.110", optional = true }

# Output formatting
comfy-table = "7.2"
derive_builder = "0.20.2"
walkdir = "2.5.0"

[dev-dependencies]
# TDD & mocking (used in tests/)
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.17.0"

# Nix-specific build notes (optional but recommended)
[build-dependencies]
# None needed — your flake.nix already provides the toolchain

# ─── Patches ──────────────────────────────────────────────────────────────────
#
# nu-plugin-core 0.110.0 imports ListenerNonblockingMode from
# interprocess::local_socket::traits, but that path was removed in
# interprocess 2.3.x (the type moved to interprocess::local_socket).
# This local patch applies the same one-line fix that nu-plugin-core 0.111.0
# already contains.  Cargo will use it only when resolving nu-plugin-core
# 0.110.0; the 0.111.0 build is unaffected.
[patch.crates-io]
nu-plugin-core = { path = "patches/nu-plugin-core-v110" }
