[package]
edition = "2024"
name = "nu-plugin-core"
version = "0.110.0"
authors = ["The Nushell Project Developers"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Shared internal functionality to support Nushell plugins (patched: interprocess 2.3+ compat)"
license = "MIT"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-plugin-core"

[features]
default = ["local-socket"]
local-socket = [
    "interprocess",
    "nu-plugin-protocol/local-socket",
]

[lib]
name = "nu_plugin_core"
path = "src/lib.rs"
bench = false

[dependencies.interprocess]
version = "2.2.0"
optional = true

[dependencies.log]
version = "0.4"

[dependencies.nu-plugin-protocol]
version = "0.110.0"
default-features = false

[dependencies.nu-protocol]
version = "0.110.0"

[dependencies.rmp-serde]
version = "1.3.1"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0.97"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"

[lints.clippy]
result_large_err = "allow"
unchecked_duration_subtraction = "warn"
used_underscore_binding = "warn"
